Fixed size issues in the new nav bar in html-info. Issues persist with spacing. Minor updates to html code.

--- a/code/css/html-info.css
+++ b/code/css/html-info.css
@@ -9,19 +9,6 @@ body {
     background-color: rgb(255, 253, 208);
 }
 
-/*
-h1 {
-    font-family: Helvetica;
-    font-weight: bold;
-}
-
-h2 {
-    font-family: Helvetica;
-    font-weight: 500;
-    font-size: 50px;
-}
-*/ 
-
 /* Header section */
 
 header {
@@ -49,37 +36,41 @@ header h2 {
 }
 */
 
-header nav {
+/* Nav Bar Section */
+
+nav {
     width: 100%;
 }
 
 header nav ul {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    list-style-type: none; 
     padding: 0; 
     margin: 0; 
 }
 
-.nav-img img {
-    width: 50%;
+header nav ul li {
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+}
+
+.return-main a,
+.advance-history a {
+    object-fit: cover;
+}
+
+.return-main img,
+.advance-history img {
+    width: 80%;
+    height: 80;
+}
+
+.nav-img-meny img {
+    width: 20%;
     height: auto;
-}
-
-header .return-main,
-header .advance-history {
-    font-family: "Goudy Bookletter 1911", 'Times New Roman', Times, serif;
-    font-weight: 600;
-    font-size: 15px;
-    color: rgba(0, 0, 0, 0.5);
-    padding: 20px 10px;
-    margin: 0;
-}
-
-.nav-img-meny {
-    height: 50%;
-    width: auto;
+    align-self: center;
 }
 
 /* Foreground Section */
